--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist = True
 usedevelop = True
-envlist = py{27,33,34,35},
+envlist = py{27,33,34,35, 36,37},
           flake8
 
 [testenv]
@@ -11,13 +11,15 @@ basepython =
     py33: python3.3
     py34: python3.4
     py35: python3.5
+    py36: python3.6
+    py37: python3.7
 deps =
     python-boilerplate
 commands = py.test src/python_data_structures/tests/ --cov
 
 [testenv:flake8]
 basepython =
-    python3.4
+    python3.7
 deps =
     flake8>=2.2.0
 commands =
