--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,6 @@ sudo: false
 # Test environments
 matrix:
   include:
-   - env: TOXENV=py27
-     python: 2.7
-   - env: TOXENV=py33
-     python: 3.3
    - env: TOXENV=py34
      python: 3.4
    - env: TOXENV=py35
@@ -20,7 +16,7 @@ matrix:
 
 # Package installation
 install:
-  - pip install tox coveralls pytest pytest-cov
+  - pip install manuel tox coveralls pytest pytest-cov
 
 # Run tests
 script:
