--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
      python: 3.6
    - env: TOXENV=py37
      python: 3.7
+     dist: xenial
+     sudo: true
 
 # Package installation
 install:
